static file setting

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,5 +33,9 @@ http {
       proxy_set_header Host $host;
       proxy_pass http://app;
     }
+    location ~ ^/(css|js)/ {
+      open_file_cache max=100;
+      root /home/isucon/webapp/static;
+    }
   }
 }
